tests/NormalTests/paczka1/small_fuzzy/30713730.err
Error in line 1: ZEy9zrlglbX A804 29,5
Error in line 6: ARQ61awA8DZ A804 8,8
Error in line 7: LNhR5 S261 88,8
